--- a/apps/modelo/templates/modelo/CrearCuenta.html
+++ b/apps/modelo/templates/modelo/CrearCuenta.html
@@ -64,19 +64,17 @@
                 <div class="form-group col-md-6">
                     <label for="inputRegioon">Región</label>
                     <select id="inputRegi" class="form-control">
-                      <option selected>Choose...</option>
-                      <option>...</option>
-                      <option>...</option>
-                      <option>...</option>
+                      {% for option in region %}
+                      <option selected> {{ option.desc_reg }}</option>
+                      {% endfor %}
                     </select>
                   </div>
                   <div class="form-group col-md-6">
                     <label for="inputState">Ciudad</label>
                     <select id="inputState" class="form-control">
-                      <option selected>Choose...</option>
-                      <option>...</option>
-                      <option>...</option>
-                      <option>...</option>
+                      {% for option in ciudad %}
+                      <option selected> {{ option.desc_ciu }}</option>
+                      {% endfor %}
                     </select>
                   </div>
             </div>
