--- a/apps/modelo/templates/modelo/login.html
+++ b/apps/modelo/templates/modelo/login.html
@@ -30,10 +30,15 @@
                     <button type="submit" class="btn btn-dark">Entrar</button>
                 </div>
 
+                <div class="text-center">
+                    <a href="{% url 'cuenta' %}"  class="btn btn-dark">Crear Cuenta</a>
+                </div>
+
                 <div class="form-group mt-3 text-center">
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div>
             </form>
+
         </div>
     </div>
 </div>
