--- a/apps/modelo/templates/modelo/register2.html
+++ b/apps/modelo/templates/modelo/register2.html
@@ -76,38 +76,8 @@
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
-					<form method="POST" action="">
+					<form2 method="POST" action="">
 						{% csrf_token %}
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-							{{form.username}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
-							</div>
-							{{form.email}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-							{{form.password1}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-							{{form.password2}}
-						</div>
-
-
-
-
-
-
 
 						perfil
 
@@ -115,78 +85,78 @@
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_rut}}
+							{{form2.us_rut}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_mail}}
+							{{form2.us_mail}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_nom}}
+							{{form2.us_nom}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_apes}}
+							{{form2.us_apes}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_nac}}
+							{{form2.us_nac}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_creac}}
+							{{form2.us_creac}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_tel}}
+							{{form2.us_tel}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_dir}}
+							{{form2.us_dir}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.us_sald}}
+							{{form2.us_sald}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.id_rol}}
+							{{form2.id_rol}}
 						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{perfilform.id_ciud}}
+							{{form2.id_ciud}}
 						</div>
 
 
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Register Account">
+				 			<input class="btn login_btn" type="submit" value="Register Account2">
 				   		</div>
 
-					</form>
+					</form2>
 				</div>
 
-				{{form.errors}}
+				{{form2.errors}}
 				
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
@@ -197,16 +167,13 @@
 		</div>
 	</div>
 	<script>
-						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+						/* Because i didnt set placeholder values in form2s.py they will be set here using vanilla Javascript
 		//We start indexing at one because CSRF_token is considered and input field 
 		 */
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Username..';
-		form_fields[2].placeholder='Email..';
-		form_fields[3].placeholder='Enter password...';
-		form_fields[4].placeholder='Re-enter Password...';
+
 
 
 		for (var field in form_fields){	
