--- a/apps/modelo/templates/modelo/register.html
+++ b/apps/modelo/templates/modelo/register.html
@@ -1,4 +1,91 @@
 
+
+ {% extends 'modelo/plantilla.html'%}
+ {% load crispy_forms_tags %}
+
+ {%  load static  %}
+
+    {% block nom %}
+    <title>CrearCuenta_juegaBuy</title>
+    {% endblock nom %}
+
+
+
+{% block main %}
+
+
+<!-- Formulario crear cuenta -->
+  <div class="container-fluid espacio">      
+    <div class="container col-md-9 shadow p-4 mb-4">
+        <div>
+            <h3 class="mb-4">Crear una Cuenta</h3>
+        </div>
+        <form method="POST" action="">
+		 {% csrf_token %}           
+            <div class="form-row ">
+                <div class="form-group col-md-6">                  
+					{{ form.username|as_crispy_field }}		
+                 
+                </div>
+                <div class="form-group col-md-6">
+					{{form.email|as_crispy_field}}                 
+                </div>
+
+            </div>
+			<div class="form-row ">
+                <div class="form-group col-md-6">                  
+					{{form.password1|as_crispy_field}}                
+                </div>
+                <div class="form-group col-md-6">
+					{{form.password2|as_crispy_field}}           
+                </div>
+
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+               	 {{perfilform.us_nom|as_crispy_field}}
+              </div>
+              <div class="form-group col-md-6">
+                {{perfilform.us_apes|as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                {{perfilform.us_rut|as_crispy_field}} 
+              </div>
+              <div class="form-group col-md-6">
+                {{perfilform.us_nac|as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">                
+                    {{perfilform.us_tel|as_crispy_field}}
+                    
+                </div>
+				    <div class="form-group col-md-6">
+                   {{perfilform.id_ciud|as_crispy_field}}
+                  </div>
+            </div>
+
+            <div class="form-row">
+				<div class="form-group col-md-12">
+                   {{perfilform.us_dir|as_crispy_field}}
+                  </div>                  
+            </div>
+        
+  
+            <button type="submit" class="btn btn-dark px-4">Registrar</button>
+          </form>
+    </div>
+  </div>
+
+  {% endblock main %}
+
+
+
+
+
+{% comment %} 
 <!DOCTYPE html>
 <html>
     
@@ -214,4 +301,4 @@
 		}
 	</script>
 </body>
-</html>
+</html> {% endcomment %}
