--- a/apps/modelo/templates/modelo/juegos.html
+++ b/apps/modelo/templates/modelo/juegos.html
@@ -42,109 +42,21 @@
     <div class="container">
         <div class="row justify-content-around m-2">
 
-            <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
-
-            <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
-
-            <!-- P4P4P4P4P4P4P4P4PP4P4P4P4P4P4P4P -->
-            <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/P4_1.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">NBA 2K21</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-
-            <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/P4_2.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Fifa 21</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-
-            <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/P4_3.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Marvel’s Avengers</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta ">
-                    <img src="{% static 'modelo/imagen/juegos/P4_4.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Dragon Ball: Kakarot</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <!-- P4P4P4P4P4P4P4P4PP4P4P4P4P4P4P4P -->
-
-
-            <!-- SWSWSWSWSWSWSWWSWSWSWSWSWSWSWSWSW -->
-            <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-jus px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/Sw_1.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Minecraft Dungeons: Hero Edition</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/Sw_2.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Zelda breath of the wild</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/Sw_3.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Super Mario 3D All-Stars NSW</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <!-- SWSWSWSWSWSWSWWSWSWSWSWSWSWSWSWSW -->
-
-            <!-- XBXBXBXBXBXBXBXBXBXBXBXBXBXBXBBXB -->
-            <div class="filterDiv xb  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/xb_1.jpeg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Borderlands (GOTY)</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv xb  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/xb_2.jpeg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Gears of War 3</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-
 <!--for para la vista de los juegos-->
             {% for i in juego %}
-            <div class="filterDiv {{i.j_plt}}  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
+            <div class="i filterDiv {{i.j_plt}}  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/' %}{{i.j_port}}" class="icarta img-fluid " alt="">
-                    <h5 class="">{{i.j_nom}}</h5>
+                    <img src="{% static 'modelo/imagen/juegos/' %}{{i.j_port}}" class="i-im icarta img-fluid " alt="">
+                    <h5 class="i-nom">{{i.j_nom}}</h5>
                     <p class="parrafo_carta">{{i.j_desc}}</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
+                    <p class="i-pre parrafo_carta">${{i.j_price}}</p>
+                    <button class="btn btn-dark mb-2 carr">AÑADIR AL CARRITO</button>
                 </div>
             </div>
             {% endfor %}
-            <!-- XBXBXBXBXBXBXBXBXBXBXBXBXBXBXBBXB -->
-
         </div>
     </div>
-
+    <div class="divcarro"></div>
     <!--JS de los filtros-->
     <script>
         filterSelection("all")
