--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -185,6 +185,9 @@
         crossorigin="anonymous"></script>
     <script src="{% static 'modelo/js/bootstrap.min.js'%}"></script>
     <script src="https://kit.fontawesome.com/1dbd616d3c.js" crossorigin="anonymous"></script>
+
+    <script src="{% static 'modelo/js/juegos.js'%}"></script>
+
 </body>
 
 </html>
