--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -41,7 +41,7 @@
                     </li>
                     {%  if request.user.is_authenticated  %}
                     <li class="nav-item  ">
-                            <a class="nav-link" href="{%  url 'perfil' %}">Perfil</a>
+                            <a class="nav-link" href="{% url 'datospersonales' %}">Perfil</a>
                         </li>
                     {%  endif  %}
                 </ul>
@@ -106,7 +106,7 @@
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Soy un robot</label>
                         </div>
-                        <a href="{%  url 'perfil'%}" type="submit" class="btn btn-dark">Entrar</a>
+                        <a href="{% url 'datospersonales' %}" type="submit" class="btn btn-dark">Entrar</a>
                         <div>
                             <a class=" btn btn-dark mt-4" type="button"  href="{% url 'cuenta' %}">Crear Cuenta</a>
                         </div>
