--- a/apps/modelo/templates/modelo/juegocomprado.html
+++ b/apps/modelo/templates/modelo/juegocomprado.html
@@ -9,12 +9,14 @@
 
 {% block main %}
 <!-- Iniciar Sesion-->
-<div  class="container-fluid espacio">
+<div  class="container-fluid text-center espacio">
     <div class="container col-md-9 shadow p-4 mb-4">
-        <h4 class="title">Muchas gracias por su copmpra</h4>
+        <h4 class="title">Muchas gracias por su copmpra en <img src="{% static 'modelo/imagen/Group 1 (1).png'%}" alt=""></a>
+        </h4>
         <div class="i modal-footer d-flex justify-content-center">
+            <div><h6 id="owo" class"uwu"></h6></div>
 
-            <h5 >Su compra tuvo un valor de: <h5 id="precioid" class="precioid"></h5></h5>
+            <div><h5 class="parrafo_carta" >Su compra tuvo un valor de: <h5 id="precioid" class="precioid"></h5></h5></div>
 
         </div>
     </div>
